@startuml clases_servidor
title Diagrama de Clases — Paquetes de Servidor y Cliente

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam packageFontSize 13
skinparam ArrowColor #444444
skinparam ClassBackgroundColor #FEFEFE
skinparam ClassBorderColor #888888

' ─────────────────────────────────────────
' Referencia externa al paquete de modelos
' ─────────────────────────────────────────
class PaqueteRed <<(D,#EAF4FF) DTO>> {
    (ver diagrama de modelos)
}

' ─────────────────────────────────────────
' PAQUETE: server/managers
' ─────────────────────────────────────────
package "whatsapp.server.managers" #FFF8EA {

    class SessionManager {
        - sesionesActivas : Map<String, ManejadorCliente> {final}
        - monitorLock : Object {final}
        --
        + SessionManager()
        + registrarUsuario(idUsuario : String, manejador : ManejadorCliente) : boolean
        + removerUsuario(idUsuario : String) : void
        + obtenerSesion(idUsuario : String) : ManejadorCliente
    }

    note right of SessionManager
        Patrón Monitor
        synchronized(monitorLock)
    end note

    class GroupManager {
        - gruposActivos : Map<String, List<String>> {final}
        - rwLock : ReadWriteLock {final}
        --
        + GroupManager()
        + registrarGrupo(idGrupo : String, idCreador : String) : boolean
        + agregarMiembro(idGrupo : String, idUsuario : String) : boolean
        + obtenerCopiaMiembros(idGrupo : String) : List<String>
        + removerUsuarioDeTodos(idUsuario : String) : void
    }

    note right of GroupManager
        Patrón Read-Write Lock
        Copias defensivas en lectura
    end note
}

' ─────────────────────────────────────────
' PAQUETE: server/handlers
' ─────────────────────────────────────────
package "whatsapp.server.handlers" #F0FFF0 {

    class ManejadorCliente {
        - socket : Socket {final}
        - sessionManager : SessionManager {final}
        - groupManager : GroupManager {final}
        - out : ObjectOutputStream
        - in : ObjectInputStream
        - idUsuarioAsignado : String
        --
        + ManejadorCliente(socket, sessionManager, groupManager)
        + run() : void
        - procesarPaquete(paquete : PaqueteRed) : void
        + enviarObjeto(paquete : PaqueteRed) : void
        - procesarMensajePrivado(msg : PaqueteMensaje) : void
        - procesarMensajeGrupal(msg : PaqueteMensaje) : void
        - liberarRecursos() : void
    }

    note right of ManejadorCliente
        Extiende Thread.
        Un hilo por cliente conectado.
    end note
}

' ─────────────────────────────────────────
' PAQUETE: server/core
' ─────────────────────────────────────────
package "whatsapp.server.core" #FFF0F0 {

    class ServidorPrincipal {
        - PUERTO : int {static} {final} = 2346
        --
        + main(args : String[]) {static}
    }

    note right of ServidorPrincipal
        Escucha en ServerSocket(2346).
        Instancia gestores e inyecta
        dependencias en ManejadorCliente.
    end note
}

' ─────────────────────────────────────────
' PAQUETE: client
' ─────────────────────────────────────────
package "whatsapp.client" #F5F0FF {

    class ClienteNodo {
        - HOST : String {static} = "localhost"
        - PUERTO : int {static} {final} = 2346
        - socket : Socket
        - out : ObjectOutputStream
        - in : ObjectInputStream
        - {volatile} miId : String
        - {volatile} pendingLoginId : String = null
        - RESET : String {static} {final}
        - COLORES : String[] {static} {final}
        - coloresAsignados : Map<String, String> {final}
        - indiceColor : int
        --
        + main(args : String[]) {static}
        + iniciar() : void
        - procesarComandos(scanner : Scanner) : void
        - escucharServidor() : void
        - obtenerColor(identificador : String) : String
        - listarComandos() : void
    }

    note right of ClienteNodo
        Dos hilos: escucha de red (daemon)
        y lectura de comandos del usuario.
        COLORES/RESET: paleta ANSI de 25 colores
        para diferenciar remitentes visualmente.
    end note
}

' ─────────────────────────────────────────
' RELACIONES
' ─────────────────────────────────────────
ServidorPrincipal ..> ManejadorCliente : <<crea>>
ServidorPrincipal ..> SessionManager   : <<instancia>>
ServidorPrincipal ..> GroupManager     : <<instancia>>

ManejadorCliente --> SessionManager    : usa (DI)
ManejadorCliente --> GroupManager      : usa (DI)
ManejadorCliente ..> PaqueteRed        : deserializa / envía
SessionManager   --> ManejadorCliente  : almacena referencia

ClienteNodo ..> PaqueteRed             : serializa / recibe

@enduml
